--- a/package.json
+++ b/package.json
@@ -19,20 +19,22 @@
     "@clerk/types": "^4.40.2",
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/native": "^7.0.0",
-    "expo": "~52.0.20",
+    "expo": "^52.0.26",
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.1",
-    "expo-linking": "~7.0.3",
-    "expo-router": "~4.0.15",
-    "expo-splash-screen": "~0.29.18",
-    "expo-status-bar": "~2.0.0",
-    "expo-system-ui": "~4.0.6",
-    "expo-web-browser": "~14.0.1",
+    "expo-linking": "~7.0.4",
+    "expo-router": "~4.0.17",
+    "expo-secure-store": "^14.0.1",
+    "expo-splash-screen": "~0.29.21",
+    "expo-status-bar": "~2.0.1",
+    "expo-system-ui": "~4.0.7",
+    "expo-web-browser": "~14.0.2",
     "nativewind": "^2.0.11",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.5",
+    "react-native": "0.76.6",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-modal": "^13.0.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
@@ -50,7 +52,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "jest": "^29.2.1",
-    "jest-expo": "~52.0.2",
+    "jest-expo": "~52.0.3",
     "prettier": "^3.3.3",
     "react-test-renderer": "18.2.0",
     "tailwindcss": "^3.3.2",
