--- a/app.json
+++ b/app.json
@@ -28,12 +28,16 @@
     },
     "web": {
       "bundler": "metro",
-      "output": "static",
+      "output": "server",
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
-      "expo-router",
-      "expo-font"
+      [
+        "expo-router",
+        {
+          "origin": "https://uber.dev/"
+        }
+      ]
     ],
     "experiments": {
       "typedRoutes": true
